# embedded-codec

./: Cargo.toml  README.md
src/: buffer.rs  codecs.rs  decoder.rs  encoder.rs  framed.rs  lib.rs  sink.rs  stream.rs
src/codecs/: lines.rs
